--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "contract"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"] # required to create a proper web assembly binary
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cosmwasm-std = { version = "1.3.1", features = ["staking"] } # standard library for smart contracts
+sylvia = "0.7.0" # provides us with three procedural macros: entry_points, contract and interface
+schemars = "0.8.12" # used to create JSON schema documents for our contracts
+cosmwasm-schema = "1.3.1" #  expands on schemars and provides us with trait QueryResponses which ties query variants to their responses
+serde = "1.0.180" # for serializing and deserializing Rust data structures
