--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ schemars = "0.8.12" # used to create JSON schema documents for our contracts
 cosmwasm-schema = "1.3.1" #  expands on schemars and provides us with trait QueryResponses which ties query variants to their responses
 serde = "1.0.180" # for serializing and deserializing Rust data structures
 cw-storage-plus = "1.1.0" # for state management
+thiserror = "1.0.44" # for custom errors
 
 [dev-dependencies]
 sylvia = { version = "0.7.0", features = ["mt"] } # multitest
