--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,15 @@ crate-type = ["cdylib"] # required to create a proper web assembly binary
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-std = { version = "1.3.1", features = ["staking"] } # standard library for smart contracts
-sylvia = "0.7.0" # provides us with three procedural macros: entry_points, contract and interface
-schemars = "0.8.12" # used to create JSON schema documents for our contracts
-cosmwasm-schema = "1.3.1" #  expands on schemars and provides us with trait QueryResponses which ties query variants to their responses
-serde = "1.0.180" # for serializing and deserializing Rust data structures
+ #contract = { version = "0.1.0", features = ["library"] }
+cosmwasm-std = { version = "1.5.0", features = ["stargate"] } # standard library for smart contracts
+sylvia = "0.9.1" # provides us with three procedural macros: entry_points, contract and interface
+schemars = "0.8.15" # used to create JSON schema documents for our contracts
+cosmwasm-schema = "1.5.0" #  expands on schemars and provides us with trait QueryResponses which ties query variants to their responses
+serde = "1.0.192" # for serializing and deserializing Rust data structures
 cw-storage-plus = "1.1.0" # for state management
-thiserror = "1.0.44" # for custom errors
+thiserror = "1.0.50" # for custom errors
 
 [dev-dependencies]
-sylvia = { version = "0.7.0", features = ["mt"] } # multitest
+sylvia = { version = "0.9.1", features = ["mt"] }
+cw-multi-test = "0.18.0"
